# PraccJS

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  postcss.config.js
.github/workflows/: publish.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tab.rs
src-tauri/src/ast_replacer/: ast_replacer.rs  lib.rs  mod.rs  utils.rs
src-tauri/src/plugins/: mod.rs  tauri_traffic_light_positioner_plugin.rs
src/assets/: Dracula.json
src/components/: Editor.svelte  Monaco.svelte  Result.svelte  Tab.svelte  Tabs.svelte  title-bar.svelte
src/routes/: +layout.svelte  +page.svelte
src/stores/: tabs.ts
src/utils/: debounce.ts
