[package]
name = "PraccJS"
version = "0.1.0"
description = "A Tauri App"
authors = ["Alex Lyalin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pracc_js_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-svelte = "0.1"
tokio = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oxc_allocator = "0.39.0"
oxc_ast = "0.39.0"
oxc_parser = "0.39.0"
oxc_span = "0.39.0"
oxc_syntax = "0.39.0"
oxc_transformer = "0.39.0"
oxc_traverse = "0.39.0"
oxc_codegen = "0.39.0"
oxc_semantic = "0.39.0"
rustyscript = "0.11.0"
rand = "0.8.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.26.0"

